# portfolio

./: .gitignore  Procfile  RENDER_DEPLOYMENT.md  app.py  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: index.py
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
portfolio/static/css/: style.css
portfolio/static/js/: script.js
portfolio/templates/portfolio/: index.html
portfolio_project/: asgi.py  settings.py  urls.py  wsgi.py
portfolio_project/api/: index.py
staticfiles/css/: style.css
